Initial author `findOne` route
