# build-docs/swagger-output.json
@@ -5,7 +5,47 @@
     "version": "1.0.0",
     "description": "Audiobookshelf API with autogenerated OpenAPI doc"
   },
-  "paths": {},
+  "paths": {
+    "/api/authors/{id}": {
+      "get": {
+        "operationId": "getAuthorByID",
+        "summary": "Get a single author by ID on server",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/authorID"
+          },
+          {
+            "$ref": "#/components/parameters/authorInclude"
+          },
+          {
+            "$ref": "#/components/parameters/authorLibraryId"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Author OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/author"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/author404"
+          }
+        }
+      }
+    }
+  },
   "components": {
     "parameters": {
       "authorID": {
